20200611黄德宝第一次提交

--- a/src/main/resources/templates/purchasingmanagement2/purchasin_management_return_drug.html
+++ b/src/main/resources/templates/purchasingmanagement2/purchasin_management_return_drug.html
@@ -184,7 +184,7 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">入库时间：</span>
             </td>
             <td style="word-break: keep-all;white-space: nowrap;width: 32%">
-                <input style="width: 22%"><span style="color: #0E74B4">至</span><input style="width: 22%;">
+                <input style="width: 23%"><span style="color: #0E74B4">至</span><input style="width: 23%;">
             </td>
             <td style="text-align: right">
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品批号：</span>
@@ -382,7 +382,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-success" onclick="saveReturnForm()" data-dismiss="modal">保存退货单</button>
-                <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">提交退货单</button>
+                <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
             </div>
         </div>
     </div>
