--- a/src/main/resources/templates/purchasingmanagement2/purchasing_management_index.html
+++ b/src/main/resources/templates/purchasingmanagement2/purchasing_management_index.html
@@ -148,6 +148,11 @@
                                         添加退货单
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="purchasin_management_return_drug" target="iframe">
+                                        添加退货药品
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li>
