--- a/src/main/resources/templates/supervision/drug_item_maintenance.html
+++ b/src/main/resources/templates/supervision/drug_item_maintenance.html
@@ -32,83 +32,86 @@
 <body class="hold-transition skin-red sidebar-mini" ng-controller="registrationOfCasesController">
 <!-- .box-body -->
 <toaster-container toaster-options="{'time-out': 1000,'position-class':'toast-top-center'}"></toaster-container>
+<form action="" id="fuzzyFormId" method="post">
 <div class="panel panel-info">
     <!-- Default panel contents -->
     <div class="panel-heading">药品品目查询</div>
     <!-- Table -->
-    <table class="table">
-        <tr>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品品目号：</span>
-            </td>
-            <td >
-                <input class="form-control" id="searchEntity_unitName">
-            </td>
-            <td style="text-align: right"><span style="white-space: nowrap;display: inline-block;color: #0E74B4">通用名：</span>
-            </td>
-            <td >
-                <input class="form-control" id="searchEntity_organizationalCode">
-            </td>
-        </tr>
-        <tr>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">剂型：</span>
-            </td>
-            <td>
-                <select id="durgfrom" style="width: 50%;height: 20%">
-                    <option value="0">请选择</option>
-                </select>
-               <!-- <input class="form-control" id="searchEntity_nameOfRegistrant" >-->
-            </td>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">规格：</span>
-            </td>
-            <td>
-                <input class="form-control">
-            </td>
-        </tr>
-        <tr>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">单位：</span>
-            </td>
-            <td>
-                <input class="form-control">
-            </td>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">转换系数：</span>
-            </td>
-            <td>
-                <input class="form-control">
-            </td>
-        </tr>
-        <tr>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品类别：</span>
-            </td>
-            <td>
-                <select id="drugcategory1" style="width: 50%;height: 20%">
-                    <option value="0">请选择</option>
-                </select>
-               <!-- <input class="form-control" id="" style="width: 50%;height: 20%">-->
-            </td>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">状态：</span>
-            </td>
-            <td>
-                <select style="width: 50%;height: 20%">
-                    <option value="0">请选择</option>
-                    <option value="1">正常</option>
-                    <option value="2">不正常</option>
-                </select>
-               <!-- <input class="form-control" id="" >-->
-            </td>
-        </tr>
-    </table>
+        <table class="table">
+            <tr>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品品目号：</span>
+                </td>
+                <td >
+                    <input class="form-control" name="drugItemsNumber">
+                </td>
+                <td style="text-align: right"><span style="white-space: nowrap;display: inline-block;color: #0E74B4">通用名：</span>
+                </td>
+                <td >
+                    <input class="form-control" name="commonName">
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">剂型：</span>
+                </td>
+                <td>
+                    <select id="durgfrom" name="dosageFormId" style="width: 50%;height: 20%">
+                        <option value="0">请选择</option>
+                    </select>
+                    <!-- <input class="form-control" id="searchEntity_nameOfRegistrant" >-->
+                </td>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">规格：</span>
+                </td>
+                <td>
+                    <input name="unit" class="form-control">
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">单位：</span>
+                </td>
+                <td>
+                    <input name="specification" class="form-control">
+                </td>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">转换系数：</span>
+                </td>
+                <td>
+                    <input name="conversionFraction" class="form-control">
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品类别：</span>
+                </td>
+                <td>
+                    <select name="drugCategoryId" id="drugcategory1" style="width: 50%;height: 20%">
+                        <option value="0">请选择</option>
+                    </select>
+                    <!-- <input class="form-control" id="" style="width: 50%;height: 20%">-->
+                </td>
+                <td style="text-align: right">
+                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">状态：</span>
+                </td>
+                <td>
+                    <select name="state" style="width: 50%;height: 20%">
+                        <option value="0">请选择</option>
+                        <option value="1">正常</option>
+                        <option value="2">不正常</option>
+                    </select>
+                    <!-- <input class="form-control" id="" >-->
+                </td>
+            </tr>
+        </table>
+
     <div style="text-align: center;padding-top: 10px">
-        <button class="btn btn-success btn-sm" onclick="selectByEntity()">查询</button>
-        <button class="btn btn-success btn-sm" onclick="selectByEntity()">导出</button>
+        <button type="button" class="btn btn-success btn-sm" onclick="fenye()">查询</button>
+        <button type="button" class="btn btn-success btn-sm" onclick="exportExcle()">导出</button>
     </div>
 </div>
+</form>
 <div class="box-body">
     <!-- 数据表格 -->
     <div class="table-box">
@@ -260,7 +263,7 @@
                     </table>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-success" onclick="save()">保存</button>
+                    <button type="button" class="btn btn-success" onclick="save()">保存</button>
                     <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
                 </div>
             </div>
