--- a/src/main/resources/templates/purchasingmanagement1/purchase_drug_inquiry1.html
+++ b/src/main/resources/templates/purchasingmanagement1/purchase_drug_inquiry1.html
@@ -175,7 +175,7 @@
         </div>
         <!--工具栏/-->
         <!--数据列表-->
-        <table id="dataList" class="table table-bordered table-striped table-hover dataTable">
+        <table id="dat" class="table table-bordered table-striped table-hover dataTable">
             <thead>
             <tr>
                 <th class="sorting_asc">序号</th>
