--- a/src/main/resources/templates/systemmanagement/user_rights_management.html
+++ b/src/main/resources/templates/systemmanagement/user_rights_management.html
@@ -3,12 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="layui/css/layui.css">
+    <script src="layui/layui.js"></script>
+    <script>
+        layui.use('table', function(){
+            var table = layui.table;
+
+            //方法级渲染
+            table.render({
+                elem: '#LAY_table_user'
+                ,url: 'http://localhost:8080/findUserAll'
+                ,cols: [
+                    [
+                    {checkbox: true, fixed: true}
+                    ,{field:'id', title: 'ID', width:80, sort: true, fixed: true}
+                    ,{field:'username', title: '用户名', width:80}
+                    ,{field:'sex', title: '性别', width:80, sort: true}
+                    ,{field:'city', title: '城市', width:80}
+                    ,{field:'sign', title: '签名'}
+                    ,{field:'experience', title: '积分', sort: true, width:80}
+                    ,{field:'score', title: '评分', sort: true, width:80}
+                    ,{field:'classify', title: '职业', width:80}
+                    ,{field:'wealth', title: '财富', sort: true, width:135}
+                ]
+                ]
+                ,id: 'testReload'
+                ,page: true
+                ,height: 310
+            });
+
+            var $ = layui.$, active = {
+                reload: function(){
+                    var demoReload = $('#demoReload');
+
+                    //执行重载
+                    table.reload('testReload', {
+                        page: {
+                            curr: 1 //重新从第 1 页开始
+                        }
+                        ,where: {
+                            key: {
+                                id: demoReload.val()
+                            }
+                        }
+                    }, 'data');
+                }
+            };
+
+            $('.demoTable .layui-btn').on('click', function(){
+                var type = $(this).data('type');
+                active[type] ? active[type].call(this) : '';
+            });
+        });
+    </script>
+
 </head>
 <body>
-<div>
+<!--<div>
     <h1>
         这里是用户权限管理
     </h1>
-</div>
+</div>-->
+<table class="layui-hide" id="LAY_table_user" lay-filter="user"></table>
 </body>
 </html>
